@@ -83,5 +83,5 @@ endif %?INSTALL%
 ## -------------- ##
 
 if %?DIST%
-DIST_COMMON += $(%DIR%_%PRIMARY%)
+DIST_COMMON += %DISTVAR%
 endif %?DIST%
