@@ -1,5 +1,5 @@
 ## automake - create Makefile.in from Makefile.am
-## Copyright (C) 1998, 1999, 2001, 2003 Free Software Foundation, Inc.
+## Copyright (C) 1998, 1999, 2001, 2003, 2004 Free Software Foundation, Inc.
 
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -84,5 +84,5 @@ clean-%DIR%JAVA:
 ## -------------- ##
 
 if %?DIST%
-DIST_COMMON += $(%DIR%_JAVA)
+DIST_COMMON += %DISTVAR%
 endif %?DIST%
