@@ -119,5 +119,5 @@ clean-lisp:
 ## -------------- ##
 
 if %?DIST%
-DIST_COMMON += $(%DIR%_LISP)
+DIST_COMMON += %DISTVAR%
 endif %?DIST%
