@@ -90,5 +90,5 @@ endif %?INSTALL%
 ## -------------- ##
 
 if %?DIST%
-DIST_COMMON += $(%DIR%_PYTHON)
+DIST_COMMON += %DISTVAR%
 endif %?DIST%
