@@ -88,7 +88,7 @@ endif %?INSTALL%
 ## -------------- ##
 
 if %?DIST%
-DIST_COMMON += $(%DIR%_SCRIPTS)
+DIST_COMMON += %DISTVAR%
 endif %?DIST%
 
 
