@@ -41,6 +41,9 @@ endif
 
 foo.h x.sh:
 	:>$@
+distdircheck: distdir
+	test -f $(distdir)/foo.h
+	test -f $(distdir)/x.sh
 EOF
 
 $ACLOCAL
@@ -67,3 +70,4 @@ test -f bin/x.sh
 $MAKE installdirs
 test ! -d inc
 test -d bin
+$MAKE distdircheck
