@@ -17,6 +17,14 @@ New in 1.8a:
     the two .o and .obj rules for usual objects, or the .lo rule for
     libtool objects.
 
+* Bug fixes.
+
+  - Distribute all files, even those which are built and installed
+    conditionally.  This change affects files listed in conditionally
+    defined *_HEADERS and *_PYTHON variable (unless they are nodist_*)
+    as well as those listed in conditionally defined dist_*_DATA,
+    dist_*_JAVA, dist_*_LISP, and dist_*_SCRIPTS variables.
+
 
 New in 1.8:
 
