@@ -1,3 +1,13 @@
+2004-01-10  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (shadow_unconditionally): New function...
+	(handle_source_transform): ... extracted from here.
+	(am_install_var): Use shadow_unconditionally to define %DISTVAR%.
+	* lib/am/data.am, lib/am/java.am, lib/am/lisp.am, lib/am/python.am,
+	lib/am/script.am: Add %DISTVAR% to DIST_COMMON.
+	* tests/cond33.test: Make sure all conditional files are distributed.
+	Report from Ralf Corsepius.
+
 2004-01-08  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* m4/mkdirp.m4 (AM_PROG_MKDIR_P): Append `.' to $(mkdir_p).
